 - [web] allow multiple messages to be marked as seen (#3873)

Bug fixes
 - [core] fixed condition in weekly recurrence calculator
 - [core] always send IMIP messages using UTF-8
 - [web] fixed mail settings persistence when sorting by arrival date
 - [web] disable submit button while saving an event or a task (#3880)
 - [web] fixed computation of week number

3.2.1 (2016-11-02)
------------------

Enhancements
 - [web] add constraints to start/end dates of automatic responder (#3841)
 - [web] allow a mailbox to be deleted immediately (#3875)
 - [web] updated Angular to version 1.5.8
 - [eas] initial support for recurring tasks EAS
 - [eas] now support replied/forwarded flags using EAS (#3796)
 - [core] updated time zones to version 2016h

Bug fixes
 - [web] fixed tasks list when some weekdays are disabled
 - [web] fixed automatic refresh of calendar view
 - [web] respect SOGoSearchMinimumWordLength in contacts list editor
 - [web] improved memory usage when importing very large address books
 - [web] fixed progress indicator while importing cards or events and tasks
 - [web] improved detection of changes in CKEditor (#3839)
 - [web] fixed vCard generation for tags with no type (#3826)
 - [web] only show the organizer field of an IMIP REPLY if one is defined
 - [web] fixed saving the note of a card (#3849)
 - [web] fixed support for recurrent tasks (#3864)
 - [web] restored support for alarms in tasks
 - [web] improved validation of mail account delegators
 - [web] fixed auto-completion of list members (#3870)
 - [web] added missing options to subscribed addressbooks (#3850)
 - [web] added missing options to subscribed calendars (#3863)
 - [web] fixed resource conflict error handling (403 vs 409 HTTP code) (#3837)
 - [web] restored immediate deletion of messages (without moving them to the trash)
 - [web] avoid mail notifications on superfluous event changes (#3790)
 - [web] CKEditor: added the pastefromexcel plugin (#3854)